@@ -10,9 +10,9 @@
       <%= link_to_function(t(:hide_detail, :scope => %w(links)), "$('reminder_#{reminder.id}_detail').toggle()") unless @show_reminder_detail %>
     </div>
     <div id="reminder_<%= reminder.id %>_detail" <%= hidden_reminder_detail -%>>
-      <%= render :partial => "/share/reminder_show_detail", :locals => {:reminder => reminder} %>
+      <%= render :partial => "/reminders/show_detail", :locals => {:reminder => reminder} %>
     </div>
-    <%= render :partial => "/share/reminder_copy_link", :locals => {:reminder => reminder} %>
+    <%= render :partial => "/reminders/show_copy_link", :locals => {:reminder => reminder} %>
   </div>
 </li>
 <% end -%>
