@@ -11,7 +11,7 @@
           <div class="show-title">
             <h2><%= h(@reminder.title) -%></h2>
           </div>
-          <%= render :partial => "/share/reminder_show_detail", :locals => {:reminder => @reminder} %>
+          <%= render :partial => "/reminders/show_detail", :locals => {:reminder => @reminder} %>
           <table>
             <tr>
             <% if current_user? %>
